Fixed Emphasis spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ em{
     font-family: cursive;
     font-size: 150%;
     color: plum;
+    margin: 1ch;
 }
 
 h1{
